# fugue

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  docs.yml
docs/: book.toml
docs/src/: SUMMARY.md  adapters.md  cli.md  configuration.md  installation.md  introduction.md  quickstart.md  vault.md
docs/src/architecture/: ipc.md  principles.md  security.md
docs/src/plugins/: capabilities.md  overview.md  security.md  writing.md
docs/src/reference/: config.md  wit.md
examples/: config.toml
examples/echo-plugin/: manifest.toml
fugue-adapters/: Cargo.toml
fugue-adapters/src/: cli_channel.rs  lib.rs  protocol.rs  telegram.rs
fugue-cli/: Cargo.toml
fugue-cli/src/: main.rs
fugue-cli/src/commands/: chat.rs  config.rs  connect.rs  log.rs  mod.rs  plugin.rs  start.rs  status.rs  stop.rs  vault.rs
fugue-core/: Cargo.toml
fugue-core/src/: audit.rs  config.rs  error.rs  ipc.rs  lib.rs  provider.rs  router.rs  state.rs  vault.rs
fugue-core/src/plugin/: capabilities.rs  manager.rs  manifest.rs  mod.rs  registry.rs  runtime.rs
fugue-core/tests/: integration.rs
fugue-sdk/: Cargo.toml
fugue-sdk/src/: lib.rs
wit/: fugue-plugin.wit
