[workspace]
members = ["fugue-core", "fugue-cli", "fugue-sdk", "fugue-adapters"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rmp-serde = "1"
blake3 = "1"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
wasmtime = { version = "43", default-features = false, features = ["cranelift", "wat", "runtime"] }
