[package]
name = "fugue-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Channel adapters for the Fugue AI agent gateway"

[dependencies]
fugue-core = { path = "../fugue-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
rmp-serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
