[package]
name = "fugue-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI for the Fugue AI agent gateway"

[[bin]]
name = "fugue"
path = "src/main.rs"

[dependencies]
fugue-core = { path = "../fugue-core" }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
